--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimaryDark">#1a237e</color>
     <!--<color name="colorPrimary">#880E4F</color>-->
-    <color name="colorPrimary">#3f51b5</color>
+    <color name="colorPrimary">#3e2723</color>
     <color name="colorPrimaryAlpha">#607d8b</color>
     <color name="colorAccent">#3f51b5</color>
     <color name="pink_100">#c5cae9</color>
