--- a/app/src/main/res/layout/activity_section_f.xml
+++ b/app/src/main/res/layout/activity_section_f.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="edu.aku.hassannaqvi.kmc.ui.SectionB2Activity">
+    tools:context="edu.aku.hassannaqvi.kmc.ui.SectionFActivity">
 
 </android.support.constraint.ConstraintLayout>
